--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://neondb_owner:AjXty30Vufev@ep-late-rice-a5lr3bif.us-east-2.aws.neon.tech/neondb?sslmode=require"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YmFsYW5jZWQtYWlyZWRhbGUtNDkuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_ciKkZx1IFq9qB5B9xjDpZxOENJyVYL2dCHYk18i5H2
+DATABASE_URL=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
